@@ -34,6 +34,7 @@ require_relative 'vpsfree-irc-bot/blog_feed'
 require_relative 'vpsfree-irc-bot/keep_nick'
 require_relative 'vpsfree-irc-bot/outage_reports'
 require_relative 'vpsfree-irc-bot/mute'
+require_relative 'vpsfree-irc-bot/forecast'
 require_relative 'vpsfree-irc-bot/help'
 require_relative 'vpsfree-irc-bot/version'
 
@@ -73,6 +74,7 @@ module VpsFree::Irc::Bot
             KeepNick,
             Mute,
             OutageReports,
+            Forecast,
         ]
 
         c.plugins.options = {
@@ -103,6 +105,7 @@ module VpsFree::Irc::Bot
             OutageReports => {
                 api_url: opts[:api_url],
             },
+            Forecast => opts[:forecast],
         }
       end
     end
