@@ -3,6 +3,7 @@
 - New command '!outage' to query info about current/selected outage
 - Improve karma regex, so that it has less false-positives
 - Help shows only one variant: either channel or private commands
+- Weather forecasting
 
 * Mon Mar 06 2017 - version 0.4.0
 - API support has been moved to a standalone module
